# xjson

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Reflection.md  concat.h  consume.h  main.c  old.h  types.h  user-parse.h  user.h
.issues/0001/: index.md
.issues/0003/: index.md
.issues/0004/: index.md
.issues/0007/: index.md
.issues/0008/: index.md
.issues/0009/: index.md
docs/: CMakeLists.txt  arrays.c  index.md  nested.c  poc.c  primitives.c  references.c  unfolded.c
docs_cpp/: CMakeLists.txt  types.hpp  unfolded.cpp
include/: concat.h  consume.h  parse.h  print.h  test.h  types.h
issues/0001/: index.md
issues/0002/: index.md
issues/0003/: index.md
issues/0004/: index.md
issues/0005/: index.md
issues/0006/: index.md
old/examples/: user-parse.h  user-print.h
old/include/: concat.h  consume.h  print.h  types.h
old/tests/: CMakeLists.txt  test.h  test_concat.c
tests/: test_concat.c  test_consume.c  test_parse.c  test_parse_array.c  test_parse_nested.c  test_print.c  test_print_array.c  test_print_nested.c  test_types.c
