cmake_minimum_required(VERSION 3.15)

# =========================================================================
#                       Project
# =========================================================================
project(
    "xjson"
    VERSION 0.0.1
    LANGUAGES C)

# =========================================================================
#                      Tests
# =========================================================================
add_subdirectory(tests)

# =========================================================================
#                      Installation
# =========================================================================
include(GNUInstallDirs)

# install(TARGETS ${name})
