cmake_minimum_required(VERSION 3.15)

# =========================================================================
#                       Project
# =========================================================================
project(
    "xjson"
    VERSION 0.0.1
    LANGUAGES C CXX)

# =========================================================================
#                      Tests
# =========================================================================
add_subdirectory(tests)

# =========================================================================
#                      Docs
# =========================================================================
add_subdirectory(docs)
add_subdirectory(docs_cpp)

# =========================================================================
#                      Installation
# =========================================================================
include(GNUInstallDirs)

# install(TARGETS ${name})
